--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -4,6 +4,7 @@ add_sources(GlobalUnitSourceList
   UnitTestMomentumABLForceNode.C
   UnitTestMomentumBodyForceNode.C
   UnitTestMomentumBoussinesqNode.C
+  UnitTestMomentumGclSrcNodeKernel.C
   UnitTestMomentumMassBDFNodeKernel.C
   UnitTestMomentumCoriolisNode.C
   UnitTestScalarMassBDFNodeKernel.C
