Convert MomentumGclSrcNodeSuppAlg to NGP (#283)
* Convert MomentumGclSrcNodeSuppAlg to NGP.

* Adding missing private keyword to header.

* Changing momentum gcl node kernel test name and adding gamma values and dt values to unit test.

* Adding gold values to momentum gcl node kernel unit test.

--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -5,6 +5,7 @@ add_sources(GlobalUnitSourceList
   UnitTestMomentumABLForceNode.C
   UnitTestMomentumBodyForceNode.C
   UnitTestMomentumBoussinesqNode.C
+  UnitTestMomentumGclSrcNodeKernel.C
   UnitTestMomentumMassBDFNodeKernel.C
   UnitTestMomentumCoriolisNode.C
   UnitTestScalarMassBDFNodeKernel.C
