Convert ScalarGclNodeSuppAlg to NGP (#285)
* Convert ScalarGclNodeSuppAlg to NGP.

* Fixing scalar gcl node kernel unit test with correct rhs values.

--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -8,6 +8,7 @@ add_sources(GlobalUnitSourceList
   UnitTestMomentumGclSrcNodeKernel.C
   UnitTestMomentumMassBDFNodeKernel.C
   UnitTestMomentumCoriolisNode.C
+  UnitTestScalarGclNodeKernel.C
   UnitTestScalarMassBDFNodeKernel.C
   UnitTestMomentumActuatorNodeKernel.C
   UnitTestTurbKineticEnergyRodiNodeKernel.C
