Converting ScalarEdgeOpenSolverAlg kernel to run on GPU
Also added unit test of old kernel to get gold results

--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -8,4 +8,5 @@ add_sources(GlobalSourceList
   # Face/edge BC kernels
   MomentumABLWallFuncEdgeKernel.C
   MomentumSymmetryEdgeKernel.C
+  ScalarEdgeOpenSolverAlg.C
   )
