--- a/unit_tests/algorithms/CMakeLists.txt
+++ b/unit_tests/algorithms/CMakeLists.txt
@@ -4,4 +4,5 @@ add_sources(GlobalUnitSourceList
    UnitTestMomentumBoussinesqSrcNodeSuppAlg.C
    UnitTestRodiAlgorithm.C
    UnitTestSSTAlgorithms.C
+   UnitTestScalarOpenAlgorithm.C
 )
