--- a/unit_tests/edge_kernels/CMakeLists.txt
+++ b/unit_tests/edge_kernels/CMakeLists.txt
@@ -8,4 +8,5 @@ add_sources(GlobalUnitSourceList
   # Face/elem edge BC kernels
   UnitTestMomentumABLWallFuncEdge.C
   UnitTestMomentumSymmetryEdge.C
+  UnitTestScalarOpenEdge.C
   )
