--- a/reg_tests/CMakeLists.txt
+++ b/reg_tests/CMakeLists.txt
@@ -27,13 +27,13 @@ else(NOT ${TEST_TOLERANCE} STREQUAL "")
   if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang"
         OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-      set(TOLERANCE 0.005)
+      set(TOLERANCE 0.05)
     elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-      set(TOLERANCE 0.005)
+      set(TOLERANCE 0.05)
     elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
-      set(TOLERANCE 0.01)
+      set(TOLERANCE 0.05)
     else()
-      set(TOLERANCE 0.0000001) # Mac default
+      set(TOLERANCE 0.05) # Mac default
     endif()
   elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
