--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -195,6 +195,7 @@ add_subdirectory(edge_kernels)
 add_subdirectory(node_kernels)
 add_subdirectory(master_element)
 add_subdirectory(mesh_motion)
+add_subdirectory(ngp_algorithms)
 add_subdirectory(nso)
 add_subdirectory(overset)
 add_subdirectory(pmr)
