Add NGP versions of algorithm driver

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_sources(GlobalSourceList
+  # Algorithms
   NodalGradEdgeAlg.C
   NodalGradElemAlg.C
   NodalGradBndryElemAlg.C
+
+  # Algorithm Drivers
+  NgpAlgDriver.C
+  NodalGradAlgDriver.C
   )
