--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -56,6 +56,7 @@ add_subdirectory(algorithms)
 add_subdirectory(kernels)
 add_subdirectory(edge_kernels)
 add_subdirectory(node_kernels)
+add_subdirectory(ngp_algorithms)
 add_subdirectory(ho_kernels)
 add_subdirectory(ngp_kernels)
 add_subdirectory(mesh_motion)
