NGP version of effective diffusive flux coefficient computation

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -3,6 +3,7 @@ add_sources(GlobalSourceList
   NodalGradEdgeAlg.C
   NodalGradElemAlg.C
   NodalGradBndryElemAlg.C
+  EffDiffFluxCoeffAlg.C
 
   # Algorithm Drivers
   NgpAlgDriver.C
