--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_sources(GlobalUnitSourceList
   UnitTestNgpAlgUtils.C
-  UnitTestNodalGradAlg.C)
+  UnitTestNodalGradAlg.C
+  UnitTestDiffFluxCoeffAlg.C
+  )
