--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -2,4 +2,5 @@ add_sources(GlobalUnitSourceList
   UnitTestNgpAlgUtils.C
   UnitTestNodalGradAlg.C
   UnitTestDiffFluxCoeffAlg.C
+  UnitTestMdotAlg.C
   )
