Convert TurbViscKsgsAlg to NGP.

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -5,6 +5,7 @@ add_sources(GlobalSourceList
   NodalGradBndryElemAlg.C
   EffDiffFluxCoeffAlg.C
   MdotEdgeAlg.C
+  TurbViscKsgsAlg.C
 
   # Algorithm Drivers
   NgpAlgDriver.C
