--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -3,4 +3,5 @@ add_sources(GlobalUnitSourceList
   UnitTestNodalGradAlg.C
   UnitTestDiffFluxCoeffAlg.C
   UnitTestMdotAlg.C
+  UnitTestTurbViscKsgsAlg.C
   )
