Convert TurbViscKsgsAlg to NGP.

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -6,6 +6,7 @@ add_sources(GlobalSourceList
   EffDiffFluxCoeffAlg.C
   EnthalpyEffDiffFluxCoeffAlg.C
   MdotEdgeAlg.C
+  TurbViscKsgsAlg.C
 
   # Algorithm Drivers
   NgpAlgDriver.C
