--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -4,4 +4,5 @@ add_sources(GlobalUnitSourceList
   UnitTestDiffFluxCoeffAlg.C
   UnitTestEnthalpyDiffFluxCoeffAlg.C 
   UnitTestMdotAlg.C
+  UnitTestTurbViscKsgsAlg.C
   )
