Conversion of EnthalpyEffectiveDiffFluxCoeffAlgorithm for NGP (#340)
* Adding rough draft of EnthalpyEffectiveDiffFluxCoeffAlgorithm for NGP.

* Filling in EnthalpyABLKernelHex8Mesh for EnthalpyEffDiffFluxCoeffAlg unit test.

* Removing unnecessary namespace.

* Fixing some formatting.

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -4,6 +4,7 @@ add_sources(GlobalSourceList
   NodalGradElemAlg.C
   NodalGradBndryElemAlg.C
   EffDiffFluxCoeffAlg.C
+  EnthalpyEffDiffFluxCoeffAlg.C
   MdotEdgeAlg.C
 
   # Algorithm Drivers
