--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -2,5 +2,6 @@ add_sources(GlobalUnitSourceList
   UnitTestNgpAlgUtils.C
   UnitTestNodalGradAlg.C
   UnitTestDiffFluxCoeffAlg.C
+  UnitTestEnthalpyDiffFluxCoeffAlg.C 
   UnitTestMdotAlg.C
   )
