Turbulent Kinetic Energy Wall Algorithm for ngp.
Finally passes unit test.

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -10,6 +10,7 @@ add_sources(GlobalSourceList
   WallFuncGeometryAlg.C
   ABLWallFrictionVelAlg.C
   TKEWallFuncAlg.C
+  TurbKineticEnergyWallAlg.C
 
   # Algorithm Drivers
   NgpAlgDriver.C
