Convert Scalar heat flux BC to NGP version

--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -27,6 +27,7 @@ add_sources(GlobalSourceList
    ScalarDiffElemKernel.C
    ScalarDiffHOElemKernel.C
    ScalarDiffFemKernel.C
+   ScalarFluxBCElemKernel.C
    ScalarFluxPenaltyElemKernel.C
    ScalarMassElemKernel.C
    ScalarMassHOElemKernel.C
