--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -5,4 +5,5 @@ add_sources(GlobalUnitSourceList
   UnitTestEnthalpyDiffFluxCoeffAlg.C 
   UnitTestMdotAlg.C
   UnitTestTurbViscKsgsAlg.C
+  UnitTestTurbViscSSTAlg.C
   )
