Convert ComputeABLWallFrictionVelocity to NGP

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -7,6 +7,8 @@ add_sources(GlobalSourceList
   EnthalpyEffDiffFluxCoeffAlg.C
   MdotEdgeAlg.C
   TurbViscKsgsAlg.C
+  WallFuncGeometryAlg.C
+  ABLWallFrictionVelAlg.C
 
   # Algorithm Drivers
   NgpAlgDriver.C
