Convert TKE Wall Function to NGP

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -9,6 +9,7 @@ add_sources(GlobalSourceList
   TurbViscKsgsAlg.C
   WallFuncGeometryAlg.C
   ABLWallFrictionVelAlg.C
+  TKEWallFuncAlg.C
 
   # Algorithm Drivers
   NgpAlgDriver.C
