Temporary unit test to create and test memory leak detection.

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_sources(GlobalUnitSourceList
    UnitTestBasicKokkos.C
    UnitTestCopyAndInterleave.C
    UnitTestCreateOnDevice.C
+   UnitTestCreateMemoryLeak.C
    UnitTestEigenDecomposition.C
    UnitTestElemDataRequests.C
    UnitTestElemSuppAlg.C
