Convert to NGP and formatting

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -7,6 +7,10 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/EffSSTDiffFluxCoeffAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/EnthalpyEffDiffFluxCoeffAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MdotEdgeAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TAMSAvgMdotEdgeAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TAMSAvgMdotElemAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SSTTAMSAveragesAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MetricTensorElemAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscKsgsAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TurbViscSSTAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallFuncGeometryAlg.C
