--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -2,6 +2,7 @@ add_sources(GlobalUnitSourceList
   UnitTestNgpAlgUtils.C
   UnitTestNodalGradAlg.C
   UnitTestDiffFluxCoeffAlg.C
+  UnitTestEffSSTDiffFluxCoeffAlg.C
   UnitTestEnthalpyDiffFluxCoeffAlg.C 
   UnitTestMdotAlg.C
   UnitTestTurbViscKsgsAlg.C
