Revert "Converting TurbViscSSTAlg to NGP (#357)"
This reverts commit 1ebf872f6e0e024a06ecaf9a34ef4f6ce440fcad.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -151,6 +151,7 @@ add_sources(GlobalSourceList
    TurbKineticEnergyEquationSystem.C
    TurbKineticEnergyKsgsBuoyantElemSuppAlg.C
    TurbViscKsgsAlgorithm.C
+   TurbViscSSTAlgorithm.C
    TurbViscSmagorinskyAlgorithm.C
    TurbViscWaleAlgorithm.C
    TurbulenceAveragingPostProcessing.C
