--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -6,4 +6,5 @@ add_sources(GlobalUnitSourceList
   UnitTestEnthalpyDiffFluxCoeffAlg.C 
   UnitTestMdotAlg.C
   UnitTestTurbViscKsgsAlg.C
+  UnitTestGeometryAlg.C
   )
