Introduce driver code for geometry & TKE ABL wall function computations (#387)
* Consolidate templated elem instance creation for reuse

* Split pre/post work for TKE wall function computation

Need an driver/algorithm design for this element loop as the pre/post work
should be carried out before/after all the topology instantiations have done
their work.

* Convert geometry computations to NGP

Converts classes responsible for computing dual_nodal_volume, element_volume,
edge_area_vector, and exposed_area_vector to NGP.

In addition, consolidates the wall area and normal distance computations to be
part of the GeometryAlgDriver to only recompute them when the mesh is moving.

For now, realm continues to use legacy algorithms because we need several master
elements converted before we can switch to the NGP versions of geometry
computation. Also SIMD/GPU versions will introduce diffs in final volume

* Add additional topology pairs for NGP face_elem alg creation

* Fix comments in geometry alg unit tests

* Update docs for the new classes added

* Remove commented out code

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -11,8 +11,12 @@ add_sources(GlobalSourceList
   WallFuncGeometryAlg.C
   ABLWallFrictionVelAlg.C
   TKEWallFuncAlg.C
+  GeometryInteriorAlg.C
+  GeometryBoundaryAlg.C
 
   # Algorithm Drivers
   NgpAlgDriver.C
   NodalGradAlgDriver.C
+  TKEWallFuncAlgDriver.C
+  GeometryAlgDriver.C
   )
