--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -6,5 +6,6 @@ add_sources(GlobalUnitSourceList
   UnitTestEnthalpyDiffFluxCoeffAlg.C 
   UnitTestMdotAlg.C
   UnitTestTurbViscKsgsAlg.C
+  UnitTestTurbViscSSTAlg.C
   UnitTestGeometryAlg.C
   )
