Add ability to compute average utau for NGP ABL wall function

--- a/src/ngp_algorithms/CMakeLists.txt
+++ b/src/ngp_algorithms/CMakeLists.txt
@@ -20,4 +20,5 @@ add_sources(GlobalSourceList
   NodalGradAlgDriver.C
   TKEWallFuncAlgDriver.C
   GeometryAlgDriver.C
+  WallFricVelAlgDriver.C
   )
