Begin deprecating boost_rtree search.
Initially, just change existing input files and also print a message
when the code encounters boost_rtree coming in from input.

Next step (after some grace period?) will be to either throw error when
boost_rtree is encountered, or automatically change it to stk_kdtree.

--- a/examples/wind_farm/case3/case_3_wind_farm.yaml
+++ b/examples/wind_farm/case3/case_3_wind_farm.yaml
@@ -266,7 +266,7 @@ realms:
 
   actuator:
     type: ActLineFAST
-    search_method: boost_rtree
+    search_method: stk_kdtree
     search_target_part: fluid_part
 
     n_turbines_glob: 2
