--- a/examples/wind_farm/case3/template_input_files/wind_farm.yaml
+++ b/examples/wind_farm/case3/template_input_files/wind_farm.yaml
@@ -250,7 +250,7 @@ realms:
 
     actuator:
       type: ActLineFAST
-      search_method: boost_rtree
+      search_method: stk_kdtree
       search_target_part: fluid_part
 
       n_turbines_glob: 1
