Convert SDR wall functions to NGP

--- a/unit_tests/ngp_algorithms/CMakeLists.txt
+++ b/unit_tests/ngp_algorithms/CMakeLists.txt
@@ -8,4 +8,5 @@ add_sources(GlobalUnitSourceList
   UnitTestTurbViscKsgsAlg.C
   UnitTestTurbViscSSTAlg.C
   UnitTestGeometryAlg.C
+  UnitTestSDRWallAlg.C
   )
