Convert continuity open BC to NGP

--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -6,6 +6,7 @@ add_sources(GlobalSourceList
   WallDistEdgeSolverAlg.C
 
   # Face/edge BC kernels
+  ContinuityOpenEdgeKernel.C
   MomentumABLWallFuncEdgeKernel.C
   MomentumSymmetryEdgeKernel.C
   ScalarEdgeOpenSolverAlg.C
