adding kernel for open bc for momentum

--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -8,6 +8,7 @@ add_sources(GlobalSourceList
   # Face/edge BC kernels
   ContinuityOpenEdgeKernel.C
   MomentumABLWallFuncEdgeKernel.C
+  MomentumOpenEdgeKernel.C
   MomentumSymmetryEdgeKernel.C
   ScalarEdgeOpenSolverAlg.C
   )
