adding unit test for MomentumOpenEdgeKernel

--- a/unit_tests/edge_kernels/CMakeLists.txt
+++ b/unit_tests/edge_kernels/CMakeLists.txt
@@ -8,6 +8,7 @@ add_sources(GlobalUnitSourceList
   # Face/elem edge BC kernels
   UnitTestContinuityOpenEdge.C
   UnitTestMomentumABLWallFuncEdge.C
+  UnitTestMomentumOpenEdge.C
   UnitTestMomentumSymmetryEdge.C
   UnitTestScalarOpenEdge.C
   )
