--- a/unit_tests/mesh_motion/CMakeLists.txt
+++ b/unit_tests/mesh_motion/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_sources(GlobalUnitSourceList
+target_sources(${utest_ex_name} PRIVATE
    UnitTestCompositeFrames.C
    UnitTestCompositeMotions.C
    UnitTestMotionTypes.C
