--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_sources(GlobalSourceList
+target_sources(nalu PRIVATE
   ContinuityGclNodeKernel.C
   ContinuityMassBDFNodeKernel.C
   EnthalpyABLForceNodeKernel.C
