Use FATAL_ERROR for cmake version requirement.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ############################ BASE ######################################
-cmake_minimum_required (VERSION 3.13.0)
+cmake_minimum_required (VERSION 3.13.0 FATAL_ERROR)
 project(Nalu CXX Fortran)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
