--- a/src/pmr/CMakeLists.txt
+++ b/src/pmr/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(nalu PRIVATE
+add_sources(GlobalSourceList
    AssembleRadTransEdgeSolverAlgorithm.C
    AssembleRadTransEdgeUpwindSolverAlgorithm.C
    AssembleRadTransWallSolverAlgorithm.C
