--- a/unit_tests/edge_kernels/CMakeLists.txt
+++ b/unit_tests/edge_kernels/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(${utest_ex_name} PRIVATE
+add_sources(GlobalUnitSourceList
   # Edge interior kernels
   UnitTestContinuityAdvEdge.C
   UnitTestMomentumAdvDiffEdge.C
