--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(${utest_ex_name} PRIVATE
+add_sources(GlobalUnitSourceList
   UnitTestContinuityGclNodeKernel.C
   UnitTestContinuityMassBDFNodeKernel.C
   UnitTestEnthalpyABLForceNode.C
